--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "framer": "^2.4.1",
+    "framer-motion": "^10.12.17",
+    "mapbox-gl": "^3.4.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
