--- a/package.json
+++ b/package.json
@@ -6,32 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "framer": "^2.4.1",
-    "framer-motion": "^10.12.17",
-    "mapbox-gl": "^3.4.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
-    "react-vertical-timeline-component": "^3.6.0",
-    "sonner": "^1.5.0"
+    "next": "15.5.3",
+    "next-themes": "^0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^3.1.0",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-vertical-timeline-component": "^3.3.6",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.3",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
